[package]
name = "beespee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*" }
toml = "0.7.2"
serde = "1.0.153"
ordered-float = "3.4.0"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }